# app.js
@@ -7,7 +7,7 @@ const swaggerUi = require("swagger-ui-express");
 const swaggerDocument = require("./swagger.json");
 
 const authRouter = require("./routes/api/auth");
-const userRouter = require("./routes/api/user");
+const productsRouter = require("./routes/api/products");
 
 const app = express();
 
@@ -19,7 +19,7 @@ app.use(express.json());
 
 app.use("/api-docs", swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 app.use("/api/auth", authRouter);
-app.use("/api/user", userRouter);
+app.use("/api/user", productsRouter);
 
 app.use((req, res) => {
   res.status(404).json({ message: "Not found" });
